# analyst-scorecard

./: .gitignore  BACKTEST_PLAN.md  LICENSE  PLAN.md  PROGRESS.md  README.md  app.py  launch_scorecard.command  pyproject.toml  requirements-live.txt  requirements.txt  website.py
.claude/: launch.json
.github/workflows/: ci.yml
.streamlit/: config.toml
analyst_scorecard/: __init__.py  aggregation.py  backtest.py  backtest_cli.py  cli.py  config.py  extraction.py  orchestrator.py  resolution.py  schemas.py  scoring.py  synth.py  verdicts.py  viz.py
analyst_scorecard/forecast/: __init__.py  backtest.py  calibration.py  cli.py  explanation.py  features.py  interval.py  live.py  lookback.py  news.py  prediction.py  probability.py  (+1 more)
evaluation/: __init__.py  extraction_eval.py  forecast_eval.py  gold_set.py  sentiment_eval.py  sentiment_gold.py
fixtures/: calls.json
tests/: test_backtest_phaseB_adapters.py  test_backtest_phaseC_sample.py  test_backtest_phaseD_runner.py  test_backtest_phaseE_lookahead.py  test_backtest_phaseF_app.py  test_extraction_evaluation.py  test_forecast_backtest.py  test_forecast_explanation.py  test_forecast_live_offline.py  test_forecast_lookahead.py  test_forecast_probability.py  test_forecast_terminal_backtest.py  test_forecast_terminal_probability.py  test_ingest_pipeline.py  test_intel_app.py  test_intel_extraction.py  test_intel_report.py  test_live_grader_offline.py  test_phase1_data.py  test_phase2_resolution.py  test_phase3_scoring.py  test_phase4_validation.py  test_phase5_extraction.py  test_phase6_orchestration.py  test_phase7_viz.py  test_phase8_verdicts.py  test_sentiment_evaluation.py  test_smoke.py
(+25 files in other folders)
